# log-aggregator

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.flink  Dockerfile.pipeline  Dockerfile.ui  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260707_0001_initial_schema.py  20260712_0002_dispatch_outbox.py
config/: alerts.yaml
docker/: entrypoint.sh
docs/: HLD.md
scripts/: create_topic.sh
src/alert_pipeline/: __init__.py  alert_config.py  config.py  dlq.py  main.py  metrics.py  observability.py  sample_producer.py  schemas.py  types.py  ui_cache_invalidate.py
src/alert_pipeline/cache/: __init__.py  alert_cache.py
src/alert_pipeline/db/: __init__.py  mapping.py  models.py  repository.py
src/alert_pipeline/dedup/: __init__.py  engine.py  fingerprint.py  quix_state.py  store.py  transition.py
src/alert_pipeline/dispatchers/: __init__.py  base.py  http.py  outbox_worker.py  registry.py  teams.py  webhook.py  zenduty.py
src/alert_pipeline/pipeline/: __init__.py  app.py
src/alert_pipeline/processing/: __init__.py  handler.py
src/alert_pipeline/runtime/: README.md  __init__.py  base.py  factory.py  flink_runtime.py  quix_runtime.py
src/alert_pipeline/sources/: __init__.py  base.py  kafka_sink.py
src/alert_pipeline/sources/grafana/: __init__.py  loki.py  main.py  normalize.py  webhook.py
src/alert_pipeline/ui/: __init__.py  app.py
src/alert_pipeline/ui/static/: app.js  index.html  styles.css
tests/: conftest.py  test_alert_cache.py  test_dedup.py  test_dedup_fields_config.py  test_dedup_parity.py  test_dedup_redis.py  test_dispatchers.py  test_event_time.py  test_grafana_sources.py  test_metrics_and_config.py  test_outbox.py  test_outbox_ops.py  test_processor_portable.py  test_quix_dedup_state.py  test_repository.py  test_status_enums.py  test_widgets.py
