[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-pipeline"
version = "0.1.0"
description = "Kafka-based alert deduplication and multi-destination dispatch pipeline"
readme = "README.md"
requires-python = ">=3.11"
# Shared core (pipeline + UI). Prefer a lockfile (requirements.lock) for prod images.
dependencies = [
    "sqlalchemy>=2.0.36,<3",
    "psycopg[binary]>=3.2.3,<4",
    "httpx>=0.27.2,<1",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "python-dotenv>=1.0.1,<2",
    "tenacity>=9.0.0,<10",
    "pyyaml>=6.0.2,<7",
    "redis>=5.2.0,<6",
    "alembic>=1.14.0,<2",
    "prometheus-client>=0.21.0,<1",
]

[project.optional-dependencies]
pipeline = [
    "quixstreams>=3.5.0,<4",
]
ui = [
    "uvicorn[standard]>=0.32.0,<1",
    "fastapi>=0.115.0,<1",
]
# Full local install (pipeline + UI)
all = [
    "alert-pipeline[pipeline,ui]",
]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "ruff>=0.8.0,<1",
    "fakeredis>=2.26.0,<3",
    "alert-pipeline[all]",
]

[project.scripts]
alert-pipeline = "alert_pipeline.main:main"
alert-dispatch-worker = "alert_pipeline.dispatchers.outbox_worker:main"
log-producer = "alert_pipeline.sample_producer:main"
alert-ui = "alert_pipeline.ui.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Long lines in docs/tests; keep F/E9 as hard errors via CI if needed
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alert_pipeline = ["ui/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
